--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -446,6 +446,12 @@ html {
   clear: both;
 }
 
+.button-row {
+  text-align: center;
+  font-size: 1.3em;
+  margin-top: 20px;
+}
+
 .hero-select, .hero-select--unknown {
   width: 50px;
   height: 50px;
